workplace/log/build_2024-05-05_21-18-59/learning/stderr.log
/usr/local/lib/python3.6/dist-packages/setuptools/command/install.py:37: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  setuptools.SetuptoolsDeprecationWarning,
  File "/home/mi/workplace/install/learning/lib/python3.6/site-packages/learning/walk_t_sec.py", line 8
    def __init__(self, name,mode,(float)speed):
                                 ^
SyntaxError: invalid syntax

